--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body style="min-width: 1245px;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
   </body>
 </html>
